# Kitty-Krush

./: .gitignore  CMakeLists.txt  CMakeLists_ubuntu.txt  README.md  architecture.md  build.sh  build_and_run.sh  names_brainstorming.md  run.sh  todo.md
include/: color.hpp  controller.hpp  element.hpp  entity_data.hpp  events.hpp  geometry.hpp  main_game.hpp  map_tiles.hpp  model.hpp  model_element.hpp  model_game.hpp  model_map.hpp  strings_utils.hpp  utils.hpp  view.hpp  window_attributes.hpp  window_elt.hpp  window_elt_style.hpp
maps/: 2p_minimal_map.kkmap  3p_stranded_on_beach.kkmap  map_2.kkmap  map_created.kkmap
res/map_tests/: map_0.kkmap  map_1.kkmap  map_2.kkmap  map_2_.kkmap
res/sprites/barricade/: barricade.xcf  barricade_schema.xcf
res/sprites/map/: base_tile.xcf
saved_data/: saved_map.kkmap
src/: color.cpp  controller.cpp  element.cpp  events.cpp  geometry.cpp  main.cpp  main_game.cpp  main_game_events.cpp  main_game_load_map.cpp  model.cpp  model_element.cpp  model_game.cpp  model_map.cpp  strings_utils.cpp  utils.cpp  view.cpp  view_menus.cpp  view_sdl.cpp  window_attributes.cpp  window_elt.cpp  window_elt_map_viewer.cpp  window_elt_style.cpp
